# AMMR

./: .gitignore  LICENSE  README.md  note.txt
amr_ws/src/amr_bringup/: CMakeLists.txt  package.xml
amr_ws/src/amr_navigation/: CMakeLists.txt  package.xml
amr_ws/src/amr_perception/: CMakeLists.txt  package.xml
amr_ws/src/base_controller/: CMakeLists.txt  package.xml
amr_ws/src/base_controller/config/: base_controller.yaml  bridge.yaml
amr_ws/src/base_controller/launch/: controller.launch.py
amr_ws/src/base_description/: setup.cfg  setup.py
amr_ws/src/base_description/launch/: display.launch.py  gazebo.launch.py
amr_ws/src/base_description/meshes/: base_link.stl  left_back_wheel_1.stl  left_front_wheel_1.stl  oakd_lite_1.stl  right_back_wheel_1.stl  right_front_wheel_1.stl
amr_ws/src/base_description/old meshes/: left_front_wheel_1.stl  oakd_lite_1.stl  right_back_wheel_1.stl
amr_ws/src/base_description/urdf/: base.gazebo  base.trans  base.xacro  materials.xacro
amr_ws/src/cika_bringup/: package.xml
amr_ws/src/cika_bringup/config/: laser_filter.yaml  ros_gz_bridge.yaml
amr_ws/src/cika_bringup/launch/: display.launch.py  gazebo.launch.py
amr_ws/src/cika_description/: package.xml  setup.py
amr_ws/src/cika_description/launch/: gazebo.launch.py
amr_ws/src/cika_description/meshes/: arm_bottom_1.stl  gripper_mount_1.stl  left_back_wheel_1.stl  left_gripper_1.stl  lidar_1.stl
amr_ws/src/cika_description/urdf/: cika.gazebo  cika.trans  cika.xacro  materials.xacro
amr_ws/src/cika_description/worlds/: warehouse_world.sdf
amr_ws/src/cika_navigation/: package.xml
amr_ws/src/cika_navigation/launch/: slam.launch.py
amr_ws/src/robot_arm_controller/config/: robot_arm_controllers.yaml
amr_ws/src/robot_arm_controller/launch/: controller.launch.py
amr_ws/src/robot_arm_description/: package.xml
amr_ws/src/robot_arm_description/launch/: gazebo.launch.py
amr_ws/src/robot_arm_description/meshes/: Base_bottom_1.stl  Base_cylinder_1.stl  Base_cylinder_1_collision.stl  Base_servo_mount_1_collision.stl  Base_top_1.stl  Bearing_clamp_1.stl  Bearing_clamp_2.stl  Bearing_clamp_2_collision.stl  Bearing_guide__1__1.stl  Bearing_guide__1__1_collision.stl  Bearing_holder_1.stl  Bearing_ring_1.stl  Bearing_top-bottom_bushing__1__1_collision.stl  Center_arm_bearing_guide__1__1.stl  Center_arm_bearing_guide_clamp__1__1_collision.stl  Center_arm_bearing_guide_clamp__2__1.stl  Gripper_120T__1__1.stl  Gripper_120T__1__1_collision.stl  Gripper_72T__1__1_collision.stl  Lower_arm_bushing_1.stl  Lower_arm_bushing__1__1.stl  Lower_arm_right_1_collision.stl  MG996R_Motor_v1__1__1_collision.stl  MG996R_Motor_v1__4__1.stl  MG996R_Motor_v1__5__1.stl  MG996R_Motor_v1__5__1_collision.stl  Potentiometer_1_collision.stl  Rotating_plate_clamp_1.stl  Servo_gear__1__1.stl  Servo_mount__1__1.stl  Servo_mount__1__1_collision.stl  Steel_ball_10mm_1.stl  Steel_ball_10mm_1_collision.stl  Steel_ball_10mm_6_collision.stl  Steel_ball_10mm_8.stl  Upper_arm_left__1__1.stl  (+3 more)
amr_ws/src/robot_arm_moveit/: .setup_assistant
amr_ws/src/robot_arm_msgs/: package.xml
amr_ws/src/robot_arm_remote/: CMakeLists.txt  package.xml
cika_base_esp32/: platformio.ini
cika_base_esp32/src/: drive_esp32_main.cpp  main.cpp
cika_ws/src/cika_bringup/: package.xml  setup.cfg  setup.py
cika_ws/src/cika_description/: package.xml  setup.cfg  setup.py
cika_ws/src/cika_hardware/: CMakeLists.txt  README.md  cika_hardware_plugins.xml  package.xml
cika_ws/src/cika_hardware/include/cika_hardware/: cika_drive_interface.hpp
cika_ws/src/cika_hardware/src/: cika_drive_interface.cpp
cika_ws/src/cika_manipulator/: .setup_assistant  CMakeLists.txt  package.xml
cika_ws/src/cika_manipulator/config/: cika.ros2_control.xacro  cika.srdf  cika.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
cika_ws/src/cika_manipulator/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
cika_ws/src/cika_manipulator/src/: task_client.cpp  task_server.cpp
cika_ws/src/cika_navigation/: CMakeLists.txt
cika_ws/src/cika_perception/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cika_ws/src/cika_perception/cika_core/: camera_node.py  classifier_node.py  detector_node.py  export_model.py
cika_ws/src/cika_perception/cika_core/utils/: depth_projection.py  visualization.py
cika_ws/src/cika_perception/config/: perception_hardware.yaml  perception_sim.yaml
cika_ws/src/cika_perception/launch/: cika_perception.launch.py
cika_ws/src/cika_perception/models/classifier/: efficientnetb0.onnx  efficientnetb0_finetuned.pth
cika_ws/src/cika_perception/msg/: WasteDetection.msg  WasteDetectionArray.msg
cika_ws/src/cika_task_manager/: CMakeLists.txt  Cmakelists.txt  package.xml  setup.py
cika_ws/src/cika_task_manager/action/: PickAndDispose.action
cika_ws/src/cika_task_manager/cika_task_manager_core/: task_manager_node.py
cika_ws/src/cika_task_manager/config/: task_manager.yaml
cika_ws/src/cika_task_manager/launch/: cika_task_manager.launch.py
cika_ws/src/robot_arm_controller/: CMakeLists.txt  package.xml
cika_ws/src/robot_arm_description/: CMakeLists.txt
cika_ws/src/robot_arm_moveit/: .setup_assistant  package.xml
cika_ws/src/robot_arm_msgs/: CMakeLists.txt
cika_ws/src/robot_arm_remote/: CMakeLists.txt
docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh
robot_arm/: note.txt
waste_ai/: .gitignore  README.md  convert_taco_to_yolo_3class.py  deploy.py  note.txt  notes.txt
waste_ai/classifier/: .gitignore  note.txt
waste_ai/classifier/src/: main.ipynb  models.py  train.py  utils.py
waste_ai/detector/: .gitignore  convert_taco_to_yolo_3class.py  convert_taco_to_yolo_binary.py  covert_taco_to_yolo.py  note.txt  taco_binary.yaml
waste_ai/models/: resnet50_finetuned.pth
waste_ai/src/: main.ipynb  models.py  utils.py
(+157 files in other folders)
