<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>base_controller</name>
  <version>0.0.1</version>
  <description>Controller configuration and launch files for the AMMR mobile base.</description>
  <maintainer email="chidubemjan31@gmail.com">ncep</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2controllers</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>base_description</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>