<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cika_hardware</name>
    <version>0.1.0</version>
    <description> ros2_control hardware interface plugins for the cika AMR. CikaDriveInterface
        bridges the skid_steer_controller to the drive ESP32 via micro-ROS topics over serial/UART. </description>
    <maintainer email="chidubem@cika.local">Chidubem</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
        <hardware_interface plugin="${prefix}/cika_hardware_plugins.xml" />
    </export>
</package>