<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cika_perception</name>
  <version>0.0.1</version>
  <description>
    Perception package for cika AMR.
    Waste detection (YOLOv8) + binary classification (EfficientNet-B0 / ResNet50)
    using OAK-D Lite RGB-D camera. Publishes WasteDetectionArray with 3D positions
    in base_link frame for downstream task manager and manipulator packages.
  </description>
  <maintainer email="chidubem@nileuniversity.edu.ng">Chidubem</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_geometry</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>