<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cika_task_manager</name>
    <version>0.0.1</version>
    <description> Task manager for cika AMR. State machine: IDLE → SELECTING → NAVIGATING →
        VERIFYING → PICKING → IDLE. Bridges perception (WasteDetectionArray) with Nav2
        (NavigateToPose) and the manipulator (PickAndDispose action — stubbed until cika_manipulator
        ready). </description>
    <maintainer email="chidubem@nileuniversity.edu.ng">Chidubem</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav2_msgs</depend>
    <depend>action_msgs</depend>
    <depend>cika_perception</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>